--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "yiisoft/yii2": ">=2.0.7"
+        "yiisoft/yii2": ">=2.0.7",
+        "vistart/yii2-models": "dev-master"
     },
     "autoload": {
         "psr-4": {
