add helpers and update widgets.

--- a/.gitattributes
+++ b/.gitattributes
@@ -16,5 +16,7 @@
 *.rtf	 diff=astextplain
 *.RTF	 diff=astextplain
 
-/docs   export-ignore
-/tests  export-ignore
+/docs          export-ignore
+/tests         export-ignore
+.gitattributes export-ignore
+.gitignore     export-ignore
