--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "require": {
         "php": ">=5.4.0",
         "yiisoft/yii2": ">=2.0.7",
+        "bower-asset/nprogress": "^0.2.0",
         "vistart/yii2-models": "dev-master"
     },
     "autoload": {
