--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "php": ">=5.4.0",
         "yiisoft/yii2": ">=2.0.7",
         "bower-asset/nprogress": "^0.2.0",
-        "vistart/yii2-models": "^2.0.0"
+        "vistart/yii2-models": "^2.0.0",
+        "vistart/helpers": "*"
     },
     "autoload": {
         "psr-4": {
